--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,29 @@
     }
     #s { display: none; }
 }
+div#1.icon { grid-area: a; }
+div#2.icon { grid-area: b; }
+div#3.icon { grid-area: c; }
+div#4.icon { grid-area: d; }
+#legend {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+        "a b c d";
+    grid-gap: 10px;
+}
+@media only screen and (max-width: 1024px) {
+    #legend {
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "a b"
+            "c d";
+        grid-gap: 10px;
+    }
+}
 
-.legend img {
+.icon img {
     height: 20px;
     margin-right: 10px;
     max-width: 65px;
@@ -71,6 +92,12 @@
 }
 .busyness-indicator.high {
 	background-image: url("./assets/user-high-occupancy.svg");
+	background-repeat: no-repeat;
+	background-position-x: right;
+	height: 30px;
+}
+.busyness-indicator.unavailable {
+	background-image: url("./assets/user-unavailable-occupancy.svg");
 	background-repeat: no-repeat;
 	background-position-x: right;
 	height: 30px;
